--- a/escolher.html
+++ b/escolher.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="home.html">Eventos</a>
         <a href="carrinho.html">Carrinho</a>
-        <a href="meusingressos.html">Meus Ingressos</a>
+        <a href="meusIngressos.html">Meus Ingressos</a>
         <a href="perfil.html">Perfil</a>
         <a href="login.html">Sair</a>
     </nav>
