--- a/meusIngressos.html
+++ b/meusIngressos.html
@@ -10,9 +10,9 @@
     <nav>
         <a href="home.html">Eventos</a>
         <a href="carrinho.html">Carrinho</a>
-        <a href="meusingressos.html">Meus Ingressos</a>
+        <a href="meusIngressos.html">Meus Ingressos</a>
         <a href="perfil.html">Perfil</a>
-        <a href="login.html">Sair</a>
+        <a href="index.html">Sair</a>
     </nav>
 </header>
 <body>
