--- a/perfil.html
+++ b/perfil.html
@@ -21,7 +21,7 @@
         <p>Nome: Usuário Exemplo</p>
         <p>Email: usuario@email.com</p>
         <a href="preferencias.html" class="event-btn">Preferências</a>
-        <a href="alterarsenha.html" class="event-btn">Alterar Senha</a>
+        <a href="alterarSenha.html" class="event-btn">Alterar Senha</a>
     </div>
 </body>
 </html>
