correção de cor de fundo e fonte de link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div>
+        <p>Bem-vindo à Bilheteria!</p>
+        <p>Faça login para continuar.</p>
+    </div>
+    <div>
         <form>
             <p>Usuário</p>
             <input type="text" placeholder="Digite seu usuário">
@@ -17,9 +21,8 @@
         </form>
     </div>
     <div>
-        <p>Bem-vindo à Bilheteria!</p>
-        <p>Faça login para continuar.</p>
-        <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
+        <p>Não tem uma conta? <a href="cadastro.html" class="cadastro-link">Cadastre-se</a></p>
     </div>
+    
 </body>    
 </html>
