--- a/index.html
+++ b/index.html
@@ -7,22 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <p>Bem-vindo à Bilheteria!</p>
-        <p>Faça login para continuar.</p>
-    </div>
-    <div>
-        <form>
-            <p>Usuário</p>
-            <input type="text" placeholder="Digite seu usuário">
-            <p>Senha</p>
-            <input type="password" placeholder="Digite sua senha">
-            <a href="home.html" class="login-btn">Login</a>
+    <div class="login-container">
+        <form class="login-form">
+            <p class="login-title">Bem-vindo à Bilheteria!</p>
+            <label for="usuario">Login</label>
+            <input type="text" id="usuario" placeholder="Digite seu usuário">
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" placeholder="Digite sua senha">
+            <div class="auth-method">
+                <span>Método de Autenticação</span>
+                <label><input type="radio" name="auth" checked> Autenticador</label>
+                <label><input type="radio" name="auth"> Email</label>
+                <label><input type="radio" name="auth"> SMS</label>
+            </div>
+            <label for="codigo2fa">Código 2FA</label>
+            <input type="text" id="codigo2fa" placeholder="Digite o código">
+            <a href="home.html" class="login-btn">Logar</a>
+            <div class="login-links">
+                <a href="#">Recuperar Meu Acesso</a>
+                <a href="#">Precisa de ajuda? Clique aqui</a>
+            </div>
+            <div class="cadastro-area">
+                <span>Não tem uma conta?</span>
+                <a href="cadastro.html" class="cadastro-link">Cadastre-se</a>
+            </div>
         </form>
     </div>
-    <div>
-        <p>Não tem uma conta? <a href="cadastro.html" class="cadastro-link">Cadastre-se</a></p>
-    </div>
-    
-</body>    
+</body>
 </html>
