--- a/escolher.html
+++ b/escolher.html
@@ -6,20 +6,20 @@
     <title>Escolha de Ingresso</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<header class="main-header">
-    <nav>
-        <a href="home.html">Eventos</a>
-        <a href="carrinho.html">Carrinho</a>
-        <a href="meusIngressos.html">Meus Ingressos</a>
-        <a href="perfil.html">Perfil</a>
-        <a href="login.html">Sair</a>
-    </nav>
-</header>
 <body>
-    <div class="event-card">
-        <h2>Escolha seu ingresso</h2>
-        <a href="carrinho.html?tipo=normal" class="event-btn">Normal</a>
-        <a href="carrinho.html?tipo=vip" class="event-btn">VIP</a>
+    <header class="main-header">
+        <nav>
+            <a href="home.html">Eventos</a>
+            <a href="carrinho.html">Carrinho</a>
+            <a href="meusIngressos.html">Meus Ingressos</a>
+            <a href="perfil.html">Perfil</a>
+            <a href="login.html">Sair</a>
+        </nav>
+    </header>
+    <div class="login-container">
+        <form class="login-form">
+            <p class="login-title">Escolha seu ingresso</p>
+            <a href="carrinho.html?tipo=normal" class="login-btn">Normal</a>
+            <a href="carrinho.html?tipo=vip" class="login-btn">VIP</a>
+        </form>
     </div>
-</body>
-</html>
