--- a/meusIngressos.html
+++ b/meusIngressos.html
@@ -6,16 +6,17 @@
     <title>Meus Ingressos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<header class="main-header">
-    <nav>
-        <a href="home.html">Eventos</a>
-        <a href="carrinho.html">Carrinho</a>
-        <a href="meusIngressos.html">Meus Ingressos</a>
-        <a href="perfil.html">Perfil</a>
-        <a href="index.html">Sair</a>
-    </nav>
-</header>
 <body>
+    <header class="main-header">
+        <nav>
+            <a href="home.html">Eventos</a>
+            <a href="carrinho.html">Carrinho</a>
+            <a href="meusIngressos.html">Meus Ingressos</a>
+            <a href="perfil.html">Perfil</a>
+            <a href="index.html">Sair</a>
+        </nav>
+    </header>
+    <h1 class="event-title">Meus Ingressos</h1>
     <div class="event-list">
         <div class="event-card">
             <h2>Show de Rock</h2>
