--- a/obrigado.html
+++ b/obrigado.html
@@ -6,20 +6,20 @@
     <title>Obrigado!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<header class="main-header">
-    <nav>
-        <a href="home.html">Eventos</a>
-        <a href="carrinho.html">Carrinho</a>
-        <a href="meusIngressos.html">Meus Ingressos</a>
-        <a href="perfil.html">Perfil</a>
-        <a href="index.html">Sair</a>
-    </nav>
-</header>
 <body>
-    <div class="event-card">
-        <h2>Obrigado pela compra!</h2>
-        <p>Seu ingresso foi enviado para o e-mail cadastrado.</p>
-        <a href="meusIngressos.html" class="event-btn">Ver meus ingressos</a>
+    <header class="main-header">
+        <nav>
+            <a href="home.html">Eventos</a>
+            <a href="carrinho.html">Carrinho</a>
+            <a href="meusIngressos.html">Meus Ingressos</a>
+            <a href="perfil.html">Perfil</a>
+            <a href="index.html">Sair</a>
+        </nav>
+    </header>
+    <div class="login-container">
+        <div class="login-form event-card">
+            <h2>Obrigado pela compra!</h2>
+            <p>Seu ingresso foi enviado para o e-mail cadastrado.</p>
+            <a href="meusIngressos.html" class="event-btn">Ver meus ingressos</a>
+        </div>
     </div>
-</body>
-</html>
