--- a/perfil.html
+++ b/perfil.html
@@ -6,22 +6,24 @@
     <title>Meu Perfil</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<header class="main-header">
-    <nav>
-        <a href="home.html">Eventos</a>
-        <a href="carrinho.html">Carrinho</a>
-        <a href="meusIngressos.html">Meus Ingressos</a>
-        <a href="perfil.html">Perfil</a>
-        <a href="index.html">Sair</a>
-    </nav>
-</header>
 <body>
-    <div class="event-card">
-        <h2>Meu Perfil</h2>
-        <p>Nome: Usuário Exemplo</p>
-        <p>Email: usuario@email.com</p>
-        <a href="preferencias.html" class="event-btn">Preferências</a>
-        <a href="alterarSenha.html" class="event-btn">Alterar Senha</a>
+    <header class="main-header">
+        <nav>
+            <a href="home.html">Eventos</a>
+            <a href="carrinho.html">Carrinho</a>
+            <a href="meusIngressos.html">Meus Ingressos</a>
+            <a href="perfil.html">Perfil</a>
+            <a href="index.html">Sair</a>
+        </nav>
+    </header>
+    <div class="login-container">
+        <div class="login-form event-card">
+            <h2>Meu Perfil</h2>
+            <p>Nome: Usuário Exemplo</p>
+            <p>Email: usuario@email.com</p>
+            <a href="preferencias.html" class="event-btn">Preferências</a>
+            <a href="alterarSenha.html" class="event-btn">Alterar Senha</a>
+        </div>
     </div>
 </body>
 </html>
