--- a/perfil.html
+++ b/perfil.html
@@ -22,7 +22,7 @@
             <p>Nome: Usuário Exemplo</p>
             <p>Email: usuario@email.com</p>
             <a href="preferencias.html" class="event-btn">Preferências</a>
-            <a href="alterarSenha.html" class="event-btn">Alterar Senha</a>
+            <a href="mudarsenha.html" class="event-btn">Alterar Senha</a>
         </div>
     </div>
 </body>
